Stylesheet/emote/tag updates 2012-10-19

--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -825,13 +825,13 @@ a.author[href$=Greenie_Lye]:before { content:"Greenie_Lye (Green Derram)" }
 a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Chillusion" }
 a.author[href$=trypsonite]:before { content:"Who"; color:blue }
 a.author[href$=RetardVomitPussyCunt]:before { content:"RainbowViolinPancakesCider" }
-a.author[href$=andysonic2]:before { content:"MASSIVE FAGGOT" }
+a.author[href$=andysonic2]:before { content:"THE DUDEST DUDE DUUUUUUUUDE!" }
 a.author[href$="10z20Luka"]:before { content:"Titty-slickers, God of Thunder and Lord of the Dance" }
 a.author[href$=PinkiePie2012]:before { content:"Empress Pie" }
 a.author[href$=DarkSideOfTheSun]:before { content:"DickSideOfTheSun" }
 a.author[href$=SkiidrowDash]:before { content:"Ski iDrow Toity" }
 a.author[href$=Backupusername]:before { content:"Cocksucker Shittytits" }
-a.author[href$=Speedingturtle]:before { content:"Slowyslowyslowslowturtle" }
+a.author[href$=Speedingturtle]:before { content:"DUUUUUUUUDE!" }
 a.author[href$=supercrunchy]:before { content:"Crumcju" }
 a.author[href$=Taiokoshinketsu]:before { content:"Tia" }
 a.author[href$=SolarLuna96]:before { content:"Fluttershy's Wrath" }
@@ -839,9 +839,9 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before { content:"Esplindiana Baker" }
+a.author[href$=Esplin]:before { content:"EspEspEsp" }
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
-a.author[href$=cheesemoo]:before { content:"cheesemeow" }
+a.author[href$=cheesemoo]:before { content:"OMGMANWTFDUDE!" }
 a.author[href$=scriptea]:before { content:"scriptease" }
 a.author[href$=QdwachMD]:before { content:"Queen QdwacgMD II " }
 a.author[href$=SirCinnamon]:before { content:"KingCinnamon" }
@@ -853,7 +853,7 @@ a.author[href$=XelNaga]:before { content:"Twi`Naga" }
 a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
-a.author[href$=herabek]:before { content:"Tits McGee" }
+a.author[href$=herabek]:before { content:"WHAT A DUDE!" }
 a.author[href$=OneOfTheseDaysLuna]:before { content:"Oodles of Noodles" }
 a.author[href$=Zovistograt]:before { content:"[](/ww20 ''Needy Bitch'')" }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
@@ -939,7 +939,7 @@ a.author[href$=IllusionOf_Integrity]:after { content:" (participates in bringing
 a.author[href$=SkiidrowDash]:after { content:" (Lord of the Hamsters)" }
 a.author[href$=trypsonite]:after { content:" is dead" }
 a.author[href$=Backupusername]:after { content:" http://www.youtube.com/watch?f&v=3JCUWl30VuM" }
-a.author[href$=andysonic2]:after { content:" THE NO FUN POLICE"; color:purple }
+a.author[href$=andysonic2]:after { content:" THE DUDE POLICE"; color:purple }
 a.author[href$=Capnpaddy]:after { content:" (banned)" }
 a.author[href$=Capnpaddydash]:after { content:" (shoot on sight)" }
 a.author[href$=Speedingturtle]:after { content:" (°ロ°)" }
@@ -951,7 +951,7 @@ a.author[href$=lord-hemingway]:after { content:" (Clopper 44)" }
 a.author[href$=Generic_Builder]:after { content:" IS SO KAWAII!" }
 a.author[href$=volcano_bakemeats]:after { content:" (Flour Sack Monster)" }
 a.author[href$=Chillusion]:after { content:" (Because I can.)" }
-a.author[href$=Esplin]:after { content:" and the Raiders of the Lost Farl" }
+a.author[href$=Esplin]:after { content:" and the Hunt for the Lost Dildo" }
 a.author[href$=waffen337]:after { content:"(Fucking ass ball bajongler)" }
 a.author[href$=sirtophat]:after { content:" (flaming homosexual)"; color:purple }
 a.author[href$=cheesemoo]:after { content:" (Continually fucks with the CSS)" }
