--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -715,6 +715,17 @@ a[href|="/rallytwi"] {
 a[href|="/rallytwi"] {
     background-position: -0px -140px
     }
+a[href|="/kdanceporsche"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 144px;
+    background-image: url(%%mhemotes%%)
+    }
+a[href|="/kdanceporsche"] {
+    background-position: -234px -145px
+    }
 a[href|="/wfworking"] {
     display: block;
     clear: none;
