--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -15,11 +15,11 @@ div.titlebox span.word {
     }
 div.titlebox .subscribers span.number:after
 {
-    content:" Sweetie Bots";
+    content:" Faithful Students";
 }
 div.titlebox .users-online span.number:after
 {
-    content:" Have phasers set to 'hug'";
+    content:" Learning about Friendship";
 }
 
 .sidecontentbox .flair-cmc, .titlebox .flair-cmc, .sidecontentbox .flair-cmcchinchy, .titlebox .flair-cmcchinchy, .sidecontentbox .flair-pinkiepiecmc, .titlebox .flair-pinkiepiecmc {
