--- a/source-css/tbpimagedump.css
+++ b/source-css/tbpimagedump.css
@@ -286,7 +286,7 @@ a[href|="/bpf69"], a[href|="/fluffle"], a[href|="/rbpf69"], a[href|="/rfluffle"]
 a[href|="/bpf70"], a[href|="/fschicks"], a[href|="/rbpf70"], a[href|="/rfschicks"] {
     background-position: -70px -0px
     }
-a[href|="/bpf71"], a[href|="/celetfly"], a[href|="/rbpf71"], a[href|="/rcelestfly"] {
+a[href|="/bpf71"], a[href|="/celestfly"], a[href|="/rbpf71"], a[href|="/rcelestfly"] {
     background-position: -70px -70px
     }
 a[href|="/bpf72"], a[href|="/fsdark"], a[href|="/rbpf72"], a[href|="/rfsdark"] {
