--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -176,7 +176,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d531hmr"]{
+.side a[href="http://fav.me/d5d3zoq"]{
    display: block;
    height: 120px;
    width: 120px;
