--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -245,19 +245,24 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"]
 {
 display: block;
 clear: none;
 float: left;
-width: 150px;
-height: 150px;
-background-image: url(%%foe-em3-v6%%) !important;
+width: 70px;
+height: 70px;
+background-image: url(%%foe-em3-v12%%) !important;
 }
 
-a[href|="/lpnotsure"]{ background-position: 0px 0px;}
-a[href|="/p21fh"]{ background-position: 0px -150px; width: 70px; height: 70px;}
-a[href|="/bjboom"]{ background-position: 0px -225px; width: 70px; height: 70px;}
+a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
+a[href|="/p21fh"]{ background-position: 0px -155px;}
+a[href|="/bjboom"]{ background-position: 0px -230px;}
+a[href|="/drrampage"]{ background-position: 0px -305px;}
+a[href|="/lpinspire"]{ background-position: 0px -380px; width:88px; height:150px;}
+a[href|="/calamitywtf"]{ background-position: 0px -535px; width:78px; height:101px;}
+a[href|="/harmony"]{ background-position: 0px -640px; width:200px; height:147px;}
+
 
 /* Flair */
 
