--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -616,7 +616,7 @@ a[href="/freakout"]:hover:after {
      
     .titlebox .usertext-body .md ol {
     width: auto;
-    background: url(%%pinkyslug%%) no-repeat scroll 4px 1px #fff;
+    background: url(%%yuhb5%%) no-repeat scroll 4px 1px #fff;
     border: 2px solid #efefef;
     position: absolute;
     top: 20px;
