Stylesheet/emote/tag updates 2012-10-22, and rewriting emotes files to new extracter (forwards IGNORE flag)

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -176,7 +176,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d5d3zoq"]{
+.side a[href="http://fav.me/d3li0z2"]{
    display: block;
    height: 120px;
    width: 120px;
