--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -249,7 +249,7 @@ a[href|="/notthebees"] {
     }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"] {
     display: block;
     clear: none;
     float: left;
@@ -319,6 +319,10 @@ a[href|="/petra"] {
 a[href|="/acer"] {
     background-position: -1561px -0px;
     width: 196px
+    }
+a[href|="/darkman"] {
+    background-position: -1757px -0px;
+    width: 113px
     }
 
 /***********MLP-XLRG*************/
