--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -154,7 +154,7 @@ div.titlebox span.word {
     display: none
     }
 div.titlebox span.number:after {
-    content: " Sleeping Gummieys"
+    content: " Schleeping Gummieys"
     }
 
 a[href="/spoiler"]:nth-of-type(n) {
@@ -166,7 +166,7 @@ a[href="/spoiler"]:nth-of-type(n):hover {
     background: #fff;
     color: #000;
     }
-
+/*
 .styleToggle {
     display: none !important;
     width: 0px !important;
@@ -174,6 +174,7 @@ a[href="/spoiler"]:nth-of-type(n):hover {
     overflow: hidden !important;
     position:absolute!important;left:-100px;    
 }
+
 input[name="subRedditStyleCheckbox"] {
     display: none !important;
     width: 0px !important;
@@ -186,7 +187,7 @@ label[for="subRedditStyleCheckbox"] {
     width: 0px !important;
     height: 0px !important;
     position:absolute!important;left:-100px;
-}
+} */
 
 /* Make the "community settings" text box bigger, because it's an unreadable clusterfuck when it's small. */
 .fancy-settings .linefield { width: 914px; }
@@ -342,15 +343,15 @@ a[href|='/flutterumm'], a[href|='/flutterwhat'], a[href|='/sackflip'], a[href|='
     background-image: url(%%hovermotes%%)
     }
 
-a[href|='/flutterumm'], a[href|='/flutterwhat']:hover {width:146px; height:152px; background-position: -0px -0px}
-a[href|='/flutterwhat'], a[href|='/flutterumm']:hover {width:146px; height:152px; background-position: -146px -0px}
-a[href|='/sackflip'] {width:199px; height:129px; background-position: -292px -0px}
-a[href|='/sackflip']:hover {width:199px; height:129px; background-position: -491px -0px}
-a[href|='/sackfun'] {width:187px; height:220px; background-position: -690px -0px}
-a[href|='/sackfun']:hover {width:187px; height:220px; background-position: -0px -220px}
-a[href|='/shitemote'] {width:246px; height:252px; background-position: -187px -220px}
-a[href|='/shitemote']:hover {width:270px; height:263px; background-position: -433px -220px}
-a[href|='/shitemote']:active {width:275px; height:266px; background-position: -703px -220px}
+a[href|='/flutterumm'], a[href|='/flutterwhat']:hover {width:146px; height:152px; background-position: -1709px -0px}
+a[href|='/flutterwhat'], a[href|='/flutterumm']:hover {width:146px; height:152px; background-position: -1563px -0px}
+a[href|='/sackflip'] {width:199px; height:129px; background-position: -1364px -0px}
+a[href|='/sackflip']:hover {width:199px; height:129px; background-position: -1165px -0px}
+a[href|='/sackfun'] {width:187px; height:220px; background-position: -978px -0px}
+a[href|='/sackfun']:hover {width:187px; height:220px; background-position: -791px -0px}
+a[href|='/shitemote'] {width:246px; height:252px; background-position: -545px -0px}
+a[href|='/shitemote']:hover {width:270px; height:263px; background-position: -275px -0px}
+a[href|='/shitemote']:active {width:275px; height:266px; background-position: -0px -0px}
 
 
 a[href|='/ajfun'], a[href|='/bonfun'], a[href|='/braefun'], a[href|='/charliefun'], a[href|='/rcrfun'], a[href|='/cheerfun'], a[href|='/darkfun'], a[href|='/dolcefun'], a[href|='/dashfun'], a[href|='/derpfun'], a[href|='/esplinfun'], a[href|='/flitterfun'], a[href|='/lyrafun'], a[href|='/orschfun'], a[href|='/pinkiefun'], a[href|='/ppfun'], a[href|='/rarfun'], a[href|='/rosefun'], a[href|='/shyfun'], a[href|='/speedyfun'], a[href|='/tlfun'], a[href|='/thunderlanefun'], a[href|='/trixfun'], a[href|='/twifun'] {
@@ -389,28 +390,28 @@ a[href|='/bmwat'], a[href|='/ch35'], a[href|='/chnuzzle'], a[href|='/cheerious']
     background-image: url(%%table10%%)
     }
 
-a[href|='/bmwat'] {width:83px; height:127px; background-position: -0px -0px}
-a[href|='/ch35'], a[href|='/chnuzzle'] {width:113px; height:152px; background-position: -83px -0px}
-a[href|='/cheerious'] {width:147px; height:152px; background-position: -0px -152px}
-a[href|='/cheerlikesit'] {width:125px; height:127px; background-position: -0px -304px}
-a[href|='/cmcexcited'] {width:228px; height:152px; background-position: -0px -431px}
-a[href|='/cordwithit'] {width:126px; height:252px; background-position: -0px -583px}
-a[href|='/crazypie'] {width:141px; height:152px; background-position: -0px -835px}
-a[href|='/derpoops'] {width:106px; height:117px; background-position: -141px -835px}
-a[href|='/disamused'] {width:118px; height:177px; background-position: -0px -987px}
-a[href|='/disangry'] {width:195px; height:202px; background-position: -0px -1164px}
-a[href|='/disexcited'] {width:173px; height:177px; background-position: -0px -1366px}
-a[href|='/diskate'] {width:194px; height:252px; background-position: -0px -1543px}
-a[href|='/foryou'] {width:204px; height:202px; background-position: -0px -1795px}
-a[href|='/genius'] {width:97px; height:102px; background-position: -0px -1997px}
-a[href|='/gildafury'] {width:256px; height:167px; background-position: -0px -2099px}
-a[href|='/herhorn'], a[href|='/gildafriendship'] {width:180px; height:202px; background-position: -0px -2266px}
-a[href|='/hipstertrixie'] {width:156px; height:177px; background-position: -0px -2468px}
-a[href|='/iwapprove'] {width:232px; height:177px; background-position: -0px -2645px}
-a[href|='/noidea'] {width:105px; height:152px; background-position: -0px -2822px}
-a[href|='/notenoughbooks'] {width:184px; height:151px; background-position: -0px -2974px}
-a[href|='/rarimad'] {width:207px; height:202px; background-position: -0px -3125px}
-a[href|='/twinuzzle'] {width:112px; height:152px; background-position: -0px -3327px}
+a[href|='/bmwat'] {width:83px; height:127px; background-position: -156px -1666px}
+a[href|='/ch35'], a[href|='/chnuzzle'] {width:113px; height:152px; background-position: -0px -2466px}
+a[href|='/cheerious'] {width:147px; height:152px; background-position: -0px -2162px}
+a[href|='/cheerlikesit'] {width:125px; height:127px; background-position: -113px -2466px}
+a[href|='/cmcexcited'] {width:228px; height:152px; background-position: -0px -2010px}
+a[href|='/cordwithit'] {width:126px; height:252px; background-position: -0px -252px}
+a[href|='/crazypie'] {width:141px; height:152px; background-position: -0px -2314px}
+a[href|='/derpoops'] {width:106px; height:117px; background-position: -0px -2769px}
+a[href|='/disamused'] {width:118px; height:177px; background-position: -126px -252px}
+a[href|='/disangry'] {width:195px; height:202px; background-position: -0px -908px}
+a[href|='/disexcited'] {width:173px; height:177px; background-position: -0px -1489px}
+a[href|='/diskate'] {width:194px; height:252px; background-position: -0px -0px}
+a[href|='/foryou'] {width:204px; height:202px; background-position: -0px -706px}
+a[href|='/genius'] {width:97px; height:102px; background-position: -106px -2769px}
+a[href|='/gildafury'] {width:256px; height:167px; background-position: -0px -1843px}
+a[href|='/herhorn'], a[href|='/gildafriendship'] {width:180px; height:202px; background-position: -0px -1110px}
+a[href|='/hipstertrixie'] {width:156px; height:177px; background-position: -0px -1666px}
+a[href|='/iwapprove'] {width:232px; height:177px; background-position: -0px -1312px}
+a[href|='/noidea'] {width:105px; height:152px; background-position: -147px -2162px}
+a[href|='/notenoughbooks'] {width:184px; height:151px; background-position: -0px -2618px}
+a[href|='/rarimad'] {width:207px; height:202px; background-position: -0px -504px}
+a[href|='/twinuzzle'] {width:112px; height:152px; background-position: -141px -2314px}
 
 
 a[href|='/a_lot'], a[href|='/flutalot'], a[href|='/absneer'], a[href|='/applepuff'], a[href|='/bendover'], a[href|='/bonwut'], a[href|='/cadancewat'], a[href|='/cadencewat'], a[href|='/chryswat'], a[href|='/cmcderp'], a[href|='/derpshrug'], a[href|='/derpsrs'], a[href|='/disbored'], a[href|='/discordwtf'], a[href|='/disgusta'], a[href|='/doitfilly'], a[href|='/eeveedash'], a[href|='/hatefuck'], a[href|='/pbf'], a[href|='/ppchainsaw'], a[href|='/ppteeth'], a[href|='/raritywooo'], a[href|='/rarizee'], a[href|='/rubysquee'], a[href|='/sbeyeroll'], a[href|='/sbgrin'], a[href|='/shyduck'], a[href|='/sockcord'], a[href|='/twipoke'], a[href|='/twiread'], a[href|='/wuna'] {
@@ -420,70 +421,70 @@ a[href|='/a_lot'], a[href|='/flutalot'], a[href|='/absneer'], a[href|='/applepuf
     background-image: url(%%table8%%)
     }
 
-a[href|='/a_lot'], a[href|='/flutalot'] {width:256px; height:142px; background-position: -0px -0px}
-a[href|='/absneer'] {width:90px; height:102px; background-position: -256px -0px}
-a[href|='/applepuff'] {width:99px; height:102px; background-position: -346px -0px}
-a[href|='/bendover'] {width:152px; height:152px; background-position: -0px -142px}
-a[href|='/bonwut'] {width:89px; height:152px; background-position: -152px -142px}
-a[href|='/cadancewat'], a[href|='/cadencewat'] {width:85px; height:127px; background-position: -241px -142px}
-a[href|='/chryswat'] {width:122px; height:127px; background-position: -326px -142px}
-a[href|='/cmcderp'] {width:175px; height:127px; background-position: -0px -294px}
-a[href|='/derpshrug'] {width:115px; height:127px; background-position: -175px -294px}
-a[href|='/derpsrs'] {width:105px; height:102px; background-position: -290px -294px}
-a[href|='/disbored'] {width:99px; height:152px; background-position: -395px -294px}
-a[href|='/discordwtf'] {width:154px; height:152px; background-position: -0px -446px}
-a[href|='/disgusta'] {width:146px; height:152px; background-position: -154px -446px}
-a[href|='/doitfilly'] {width:185px; height:202px; background-position: -300px -446px}
-a[href|='/eeveedash'] {width:79px; height:102px; background-position: -0px -648px}
-a[href|='/hatefuck'] {width:256px; height:231px; background-position: -79px -648px}
-a[href|='/pbf'] {width:66px; height:82px; background-position: -335px -648px}
-a[href|='/ppchainsaw'] {width:226px; height:152px; background-position: -0px -879px}
-a[href|='/ppteeth'] {width:166px; height:152px; background-position: -226px -879px}
-a[href|='/raritywooo'] {width:100px; height:152px; background-position: -392px -879px}
-a[href|='/rarizee'] {width:97px; height:102px; background-position: -0px -1031px}
-a[href|='/rubysquee'] {width:124px; height:127px; background-position: -97px -1031px}
-a[href|='/sbeyeroll'] {width:69px; height:77px; background-position: -221px -1031px}
-a[href|='/sbgrin'] {width:74px; height:77px; background-position: -290px -1031px}
-a[href|='/shyduck'] {width:91px; height:102px; background-position: -364px -1031px}
-a[href|='/sockcord'] {width:97px; height:152px; background-position: -0px -1158px}
-a[href|='/twipoke'] {width:101px; height:102px; background-position: -97px -1158px}
-a[href|='/twiread'] {width:256px; height:108px; background-position: -198px -1158px}
-a[href|='/wuna'] {width:146px; height:202px; background-position: -0px -1310px}
+a[href|='/a_lot'], a[href|='/flutalot'] {width:256px; height:142px; background-position: -0px -1851px}
+a[href|='/absneer'] {width:90px; height:102px; background-position: -166px -787px}
+a[href|='/applepuff'] {width:99px; height:102px; background-position: -154px -939px}
+a[href|='/bendover'] {width:152px; height:152px; background-position: -0px -1091px}
+a[href|='/bonwut'] {width:89px; height:152px; background-position: -0px -1699px}
+a[href|='/cadancewat'], a[href|='/cadencewat'] {width:85px; height:127px; background-position: -146px -1243px}
+a[href|='/chryswat'] {width:122px; height:127px; background-position: -97px -1547px}
+a[href|='/cmcderp'] {width:175px; height:127px; background-position: -0px -1993px}
+a[href|='/derpshrug'] {width:115px; height:127px; background-position: -99px -1395px}
+a[href|='/derpsrs'] {width:105px; height:102px; background-position: -0px -2228px}
+a[href|='/disbored'] {width:99px; height:152px; background-position: -0px -1395px}
+a[href|='/discordwtf'] {width:154px; height:152px; background-position: -0px -939px}
+a[href|='/disgusta'] {width:146px; height:152px; background-position: -0px -1243px}
+a[href|='/doitfilly'] {width:185px; height:202px; background-position: -0px -231px}
+a[href|='/eeveedash'] {width:79px; height:102px; background-position: -175px -1993px}
+a[href|='/hatefuck'] {width:256px; height:231px; background-position: -0px -0px}
+a[href|='/pbf'] {width:66px; height:82px; background-position: -185px -231px}
+a[href|='/ppchainsaw'] {width:226px; height:152px; background-position: -0px -635px}
+a[href|='/ppteeth'] {width:166px; height:152px; background-position: -0px -787px}
+a[href|='/raritywooo'] {width:100px; height:152px; background-position: -146px -433px}
+a[href|='/rarizee'] {width:97px; height:102px; background-position: -105px -2228px}
+a[href|='/rubysquee'] {width:124px; height:127px; background-position: -89px -1699px}
+a[href|='/sbeyeroll'] {width:69px; height:77px; background-position: -185px -313px}
+a[href|='/sbgrin'] {width:74px; height:77px; background-position: -91px -2330px}
+a[href|='/shyduck'] {width:91px; height:102px; background-position: -0px -2330px}
+a[href|='/sockcord'] {width:97px; height:152px; background-position: -0px -1547px}
+a[href|='/twipoke'] {width:101px; height:102px; background-position: -152px -1091px}
+a[href|='/twiread'] {width:256px; height:108px; background-position: -0px -2120px}
+a[href|='/wuna'] {width:146px; height:202px; background-position: -0px -433px}
 
 
-a[href|='/cowpony'], a[href|='/creamsicle'], a[href|='/diswut'], a[href|='/dod'], a[href|='/dresscord'], a[href|='/ishygdadt'], a[href|='/eagleeye'], a[href|='/hawkeye'], a[href|='/flutterpout'], a[href|='/frightenpie'], a[href|='/inurbutt'], a[href|='/lunadark'], a[href|='/macgasp'], a[href|='/ppfof'], a[href|='/ppsly'], a[href|='/psychiatwi'], a[href|='/twithis'], a[href|='/queencheer'], a[href|='/rarhorror'], a[href|='/rosefof'], a[href|='/sbshy'], a[href|='/scootscared'], a[href|='/sexymac'], a[href|='/soarinshock'], a[href|='/twicake'], a[href|='/twiglare'], a[href|='/twiteehee'], a[href|='/twiteeth'] {
+a[href|='/cowpony'], a[href|='/creamsicle'], a[href|='/diswut'], a[href|='/dod'], a[href|='/dresscord'], a[href|='/ishygdadt'], a[href|='/eagleeye'], a[href|='/hawkeye'], a[href|='/flutterpout'], a[href|='/frightenpie'], a[href|='/inurbutt'], a[href|='/lunadark'], a[href|='/macgasp'], a[href|='/ppfof'], a[href|='/ppsly'], a[href|='/psychiatwi'], a[href|='/queencheer'], a[href|='/rarhorror'], a[href|='/rosefof'], a[href|='/sbshy'], a[href|='/scootscared'], a[href|='/sexymac'], a[href|='/soarinshock'], a[href|='/twicake'], a[href|='/twiglare'], a[href|='/twiteehee'], a[href|='/twiteeth'] {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%table9%%)
     }
 
-a[href|='/cowpony'] {width:147px; height:177px; background-position: -0px -0px}
-a[href|='/creamsicle'] {width:127px; height:163px; background-position: -0px -177px}
-a[href|='/diswut'] {width:174px; height:202px; background-position: -0px -340px}
-a[href|='/dod'] {width:110px; height:127px; background-position: -0px -542px}
-a[href|='/dresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -669px}
-a[href|='/dresscord'] {width:158px; height:252px; background-position: -0px -871px}
-a[href|='/eagleeye'], a[href|='/hawkeye'] {width:160px; height:152px; background-position: -0px -1123px}
-a[href|='/flutterpout'] {width:130px; height:127px; background-position: -0px -1275px}
-a[href|='/frightenpie'] {width:113px; height:152px; background-position: -130px -1275px}
-a[href|='/inurbutt'] {width:157px; height:177px; background-position: -0px -1427px}
-a[href|='/lunadark'] {width:183px; height:202px; background-position: -0px -1604px}
-a[href|='/macgasp'] {width:101px; height:152px; background-position: -0px -1806px}
-a[href|='/ppfof'] {width:176px; height:152px; background-position: -0px -1958px}
-a[href|='/ppsly'] {width:111px; height:152px; background-position: -0px -2110px}
-a[href|='/psychiatwi'], a[href|='/twithis'] {width:210px; height:202px; background-position: -0px -2262px}
-a[href|='/queencheer'] {width:155px; height:127px; background-position: -0px -2464px}
-a[href|='/rarhorror'] {width:162px; height:152px; background-position: -0px -2591px}
-a[href|='/rosefof'] {width:144px; height:152px; background-position: -0px -2743px}
-a[href|='/sbshy'] {width:85px; height:127px; background-position: -144px -2743px}
-a[href|='/scootscared'] {width:140px; height:129px; background-position: -0px -2895px}
-a[href|='/sexymac'] {width:200px; height:202px; background-position: -0px -3024px}
-a[href|='/soarinshock'] {width:110px; height:127px; background-position: -0px -3226px}
-a[href|='/twicake'] {width:126px; height:127px; background-position: -110px -3226px}
-a[href|='/twiglare'] {width:124px; height:102px; background-position: -0px -3353px}
-a[href|='/twiteehee'] {width:104px; height:152px; background-position: -124px -3353px}
-a[href|='/twiteeth'] {width:141px; height:177px; background-position: -0px -3505px}
+a[href|='/cowpony'] {width:147px; height:177px; background-position: -0px -2022px}
+a[href|='/creamsicle'] {width:127px; height:163px; background-position: -0px -2784px}
+a[href|='/diswut'] {width:174px; height:202px; background-position: -0px -960px}
+a[href|='/dod'] {width:110px; height:127px; background-position: -141px -2478px}
+a[href|='/dresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -0px}
+a[href|='/dresscord'] {width:158px; height:252px; background-position: -0px -1466px}
+a[href|='/eagleeye'], a[href|='/hawkeye'] {width:160px; height:152px; background-position: -0px -1314px}
+a[href|='/flutterpout'] {width:130px; height:127px; background-position: -0px -2657px}
+a[href|='/frightenpie'] {width:113px; height:152px; background-position: -130px -2757px}
+a[href|='/inurbutt'] {width:157px; height:177px; background-position: -0px -1718px}
+a[href|='/lunadark'] {width:183px; height:202px; background-position: -0px -606px}
+a[href|='/macgasp'] {width:101px; height:152px; background-position: -147px -2174px}
+a[href|='/ppfof'] {width:176px; height:152px; background-position: -0px -808px}
+a[href|='/ppsly'] {width:111px; height:152px; background-position: -140px -2605px}
+a[href|='/psychiatwi'] {width:210px; height:202px; background-position: -0px -202px}
+a[href|='/queencheer'] {width:155px; height:127px; background-position: -0px -1895px}
+a[href|='/rarhorror'] {width:162px; height:152px; background-position: -0px -1162px}
+a[href|='/rosefof'] {width:144px; height:152px; background-position: -0px -2199px}
+a[href|='/sbshy'] {width:85px; height:127px; background-position: -162px -1162px}
+a[href|='/scootscared'] {width:140px; height:129px; background-position: -0px -2528px}
+a[href|='/sexymac'] {width:200px; height:202px; background-position: -0px -404px}
+a[href|='/soarinshock'] {width:110px; height:127px; background-position: -141px -2351px}
+a[href|='/twicake'] {width:126px; height:127px; background-position: -0px -2947px}
+a[href|='/twiglare'] {width:124px; height:102px; background-position: -127px -2909px}
+a[href|='/twiteehee'] {width:104px; height:152px; background-position: -147px -2022px}
+a[href|='/twiteeth'] {width:141px; height:177px; background-position: -0px -2351px}
 
 
 
@@ -854,7 +855,7 @@ a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
 a.author[href$=herabek]:before { content:"WHAT A DUDE!" }
-a.author[href$=OneOfTheseDaysLuna]:before { content:"Oodles of Noodles" }
+a.author[href$=OneOfTheseDaysLuna]:before { content:"Oodles of Dude'els" }
 a.author[href$=Zovistograt]:before { content:"[](/ww20 ''Needy Bitch'')" }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
 
