Stylesheet/emote/tag updates 2012-10-22

--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -244,11 +244,11 @@ clear: both;
 }
 
 /* header image location */
-
+/*
 #header-img {
-margin: 0px 0px -3px 0px;
+margin: 0px 0px 0px 0px;
 }
-
+*/
 
 .content {
    margin-top: 13px;
