--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -80,6 +80,7 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 |        MOSTLY BY KOOBAXION AND 007GHG7        
 |ALSO SOME CREDIT GOES TO RAHLYN AND MRJOKER7854
 |              RAHLYN IS THE FLAIR GOD
+|         HAI GUIZ I DID NAMEZ SO I HELPED -Joker
 |                      ***                      
 |  THANKS TO R/ELECTROHOUSE, R/ANDROID, AND ALL 
 |THE OTHER SUBREDDITS I STOLE, I MEAN BORROWED  
@@ -601,7 +602,15 @@ div.titlebox .users-online span.number:after
 
 a.author[href$="derram_2"],
 a.author[href$=Chinch335],
-a.author[href$="mrjoker7854"]
+a.author[href$="mrjoker7854"],
+a.author[href$="120percentP0N3"],
+a.author[href$="simgaleed"],
+a.author[href$="coggy9"],
+a.author[href$="xane_nightwing"],
+a.author[href$="Ninja8259"],
+a.author[href$="bwicesoldier"],
+a.author[href$="ajtexasranger"],
+a.author[href$="shadari"]
 
 { 
 font-size:0!important; 
@@ -614,7 +623,16 @@ content: "";
 
 a.author[href$="derram_2"]:before,
 a.author[href$=Chinch335]:before ,
-a.author[href$="mrjoker7854"]:before
+a.author[href$="mrjoker7854"]:before ,
+a.author[href$="120percentP0N3"]:before ,
+a.author[href$="simgaleed"]:before ,
+a.author[href$="coggy9"]:before ,
+a.author[href$="xane_nightwing"]:before , 
+a.author[href$="Ninja8259"]:before ,
+a.author[href$="bwicesoldier"]:before ,
+a.author[href$="ajtexasranger"]:before ,
+a.author[href$="shadari"]:before 
+
 
 {
 font-size:10px!important; 
@@ -626,3 +644,11 @@ visibility:visible!important;
 a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
 a.author[href$=Chinch335]:before {content:"Chinchy"}
 a.author[href$="mrjoker7854"]:before {content:"Pinkie Scratchspectacularathon"}
+a.author[href$="120percentP0N3"]:before {content:"120percentcooler"}
+a.author[href$="simgaleed"]:before {content:"DarkNote"}
+a.author[href$="coggy9"]:before {content:"Steve"}
+a.author[href$="xane_nightwing"]:before {content:"Vinyl's Boyfriend <3"}
+a.author[href$="Ninja8259"]:before {content:"Colgate"}
+a.author[href$="bwicesoldier"]:before {content:"IceSoldier"}
+a.author[href$="ajtexasranger"]:before {content:"That Guy"}
+a.author[href$="shadari"]:before {content:"Shadari Scratchtavia"}
