Stylesheet/emote/tag updates 2012-10-23

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -43,6 +43,15 @@ a[href|="/fluttershythis"], a[href|="/shythis"], a[href|="/flutterthis"] {
     height: 500px;
     background-image: url(%%this%%)
     }
+a[href|="/twirighthug"], a[href|="/twilighthug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%twirighthug%%)
+    }
+
 
 /* Flair! So many wonderful choices! */
 
@@ -176,7 +185,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d3li0z2"]{
+.side a[href="http://fav.me/d5b0som"]{
    display: block;
    height: 120px;
    width: 120px;
