--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,3 +1,5 @@
+a[href|="/brd"] { display: block; clear: none; float: left; background-image: url(%%bird%%); width: 120px; height: 120px; background-position: -0px -0px }
+
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
    
@@ -807,7 +809,7 @@ a.author[href$="HtotheGRIFF"]:before {content:"faggot"}
 a.author[href$="viper9172"]:before {content:"Sidelong"}
 a.author[href$="Lazeraze"]:before {content:"Snowlily"}
 a.author[href$="31eipekili"]:before {content:"I like pie 13"}
-a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
+a.author[href$="derram_2"]:before /*{content:"derramina Diane Pie"}*/{content:"ArchangelleCupcakes"}
 a.author[href$="Chiv_Cortland"]:before {content:"Chivvypoop"}
 a.author[href$="442B8AEF9"]:before {content:"Socialery"}
 a.author[href$="anonpon3"]:before {content:"Artful" }
@@ -826,13 +828,13 @@ a.author[href$=Greenie_Lye]:before { content:"Greenie_Lye (Green Derram)" }
 a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Chillusion" }
 a.author[href$=trypsonite]:before { content:"Who"; color:blue }
 a.author[href$=RetardVomitPussyCunt]:before { content:"RainbowViolinPancakesCider" }
-a.author[href$=andysonic2]:before { content:"THE DUDEST DUDE DUUUUUUUUDE!" }
+a.author[href$=andysonic2]:before /*{ content:"THE DUDEST DUDE DUUUUUUUUDE!" } */{content:"Archangelle1"}
 a.author[href$="10z20Luka"]:before { content:"Titty-slickers, God of Thunder and Lord of the Dance" }
 a.author[href$=PinkiePie2012]:before { content:"Empress Pie" }
 a.author[href$=DarkSideOfTheSun]:before { content:"DickSideOfTheSun" }
 a.author[href$=SkiidrowDash]:before { content:"Ski iDrow Toity" }
 a.author[href$=Backupusername]:before { content:"Cocksucker Shittytits" }
-a.author[href$=Speedingturtle]:before { content:"DUUUUUUUUDE!" }
+a.author[href$=Speedingturtle]:before { content:"ArchangelleDovahkiin" }
 a.author[href$=supercrunchy]:before { content:"Crumcju" }
 a.author[href$=Taiokoshinketsu]:before { content:"Tia" }
 a.author[href$=SolarLuna96]:before { content:"Fluttershy's Wrath" }
@@ -840,9 +842,9 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before { content:"EspEspEsp" }
+a.author[href$=Esplin]:before /*{ content:"EspEspEsp" }*/ {content:"ArchangelleHorsecock"}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
-a.author[href$=cheesemoo]:before { content:"OMGMANWTFDUDE!" }
+a.author[href$=cheesemoo]:before { content:"Archangellecheesemoo" }
 a.author[href$=scriptea]:before { content:"scriptease" }
 a.author[href$=QdwachMD]:before { content:"Queen QdwacgMD II " }
 a.author[href$=SirCinnamon]:before { content:"KingCinnamon" }
@@ -854,7 +856,7 @@ a.author[href$=XelNaga]:before { content:"Twi`Naga" }
 a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
-a.author[href$=herabek]:before { content:"WHAT A DUDE!" }
+a.author[href$=herabek]:before /*{ content:"WHAT A DUDE!" }*/{content:"ArchangelleHerb"}
 a.author[href$=OneOfTheseDaysLuna]:before { content:"Oodles of Dude'els" }
 a.author[href$=Zovistograt]:before { content:"[](/ww20 ''Needy Bitch'')" }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
