--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -12,7 +12,7 @@ div.side:before {
     margin: 0px;
     font-weight: 500;
     font-size: 1.0em;
-/*    content: "Congratulations to our contest winners!" */
+/*    content: "JOKER IS AWESOME!!223!" */
     }
 
 /*------------------------  Changes background -------------------------------*/
@@ -80,11 +80,7 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 |        MOSTLY BY KOOBAXION AND 007GHG7        
 |ALSO SOME CREDIT GOES TO RAHLYN AND MRJOKER7854
 |              RAHLYN IS THE FLAIR GOD
-|         HAI GUIZ I DID NAMEZ SO I HELPED -Joker
-|                      ***                      
-|  THANKS TO R/ELECTROHOUSE, R/ANDROID, AND ALL 
-|THE OTHER SUBREDDITS I STOLE, I MEAN BORROWED  
-|CSS FROM.                                      
+|         HAI GUIZ I DID NAMEZ SO I HELPED -Joker                                     
 |                                                
 */
 
@@ -436,7 +432,7 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 
 /*vs_start*/
 	
-a[href|='/vswink'],a[href|='/vs22'],a[href|='/shrug'],a[href|='/vsshrug'],a[href|='/tableflip'],a[href|='/vsbass'],a[href|='/vs15'],a[href|='/vscurious'],a[href|='/vs13'],a[href|='/vsdeal'],a[href|='/vs01'],a[href|='/vsderp'],a[href|='/vs02'],a[href|='/vsfilly'],a[href|='/vs07'],a[href|='/vshair'],a[href|='/vs20'],a[href|='/vshappy'],a[href|='/vs14'],a[href|='/vshey'],a[href|='/vs12'],a[href|='/vshooves'],a[href|='/vs04'],a[href|='/vsjuice'],a[href|='/vs23'],a[href|='/vslook'],a[href|='/vs05'],a[href|='/vslying'],a[href|='/vs03'],a[href|='/vsmeh'],a[href|='/vs21'],a[href|='/vsmine'],a[href|='/vs25'],a[href|='/vsmog'],a[href|='/vs08'],a[href|='/vsnope'],a[href|='/vs26'],a[href|='/vsohyou'],a[href|='/vs00'],a[href|='/vsomg'],a[href|='/vs06'],a[href|='/vsoooo'],a[href|='/vs16'],a[href|='/vssad'],a[href|='/vs10'],a[href|='/vssup'],a[href|='/vs24'],a[href|='/vstear'],a[href|='/vs11'],a[href|='/vswtf'],a[href|='/vs27'], a[href|='/vswhathefuck'],a[href|='/vsyds'],a[href|='/vs17'], a[href|='/vsyoudontsay'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vscute'],a[href|='/vs18'],a[href|='/vssalute'],a[href|='/vs28'],a[href|='/vsboring'], a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'] {
+a[href|='/vswink'],a[href|='/vs22'],a[href|='/shrug'],a[href|='/vsshrug'],a[href|='/tableflip'],a[href|='/vsbass'],a[href|='/vs15'],a[href|='/vscurious'],a[href|='/vs13'],a[href|='/vsdeal'],a[href|='/vs01'],a[href|='/vsderp'],a[href|='/vs02'],a[href|='/vsfilly'],a[href|='/vs07'],a[href|='/vshair'],a[href|='/vs20'],a[href|='/vshappy'],a[href|='/vs14'],a[href|='/vshey'],a[href|='/vs12'],a[href|='/vshooves'],a[href|='/vs04'],a[href|='/vsjuice'],a[href|='/vs23'],a[href|='/vslook'],a[href|='/vs05'],a[href|='/vslying'],a[href|='/vs03'],a[href|='/vsmeh'],a[href|='/vs21'],a[href|='/vsmine'],a[href|='/vs25'],a[href|='/vsmog'],a[href|='/vs08'],a[href|='/vsnope'],a[href|='/vs26'],a[href|='/vsohyou'],a[href|='/vs00'],a[href|='/vsomg'],a[href|='/vs06'],a[href|='/vsoooo'],a[href|='/vs16'],a[href|='/vssad'],a[href|='/vs10'],a[href|='/vssup'],a[href|='/vs24'],a[href|='/vstear'],a[href|='/vs11'],a[href|='/vswtf'],a[href|='/vs27'], a[href|='/vswhathefuck'],a[href|='/vsyds'],a[href|='/vs17'], a[href|='/vsyoudontsay'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vscute'],a[href|='/vs18'],a[href|='/vssalute'],a[href|='/vs28'],a[href|='/vsboring'], a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'], a[href|='/vssquee'] {
     display: block;
     clear: none;
     float: left;
@@ -476,10 +472,10 @@ a[href|='/vscute'],a[href|='/vs18'] {width:60px; height:70px; background-positio
 a[href|='/vssalute'] {width:187px; height:142px; background-position: -337px -0px}
 a[href|='/vs28'],a[href|='/vsboring']  {width:70px; height:70px; background-position: -0px -150px}
 a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'] {width:59px; height:70px;background-position: -450px -253px}
-
+a[href|='/vssquee'] {width:102px; height:80px;background-position: -422px -147px}
 
 /* Other Emotes*/
-
+a[href|='/vsdance'] { width:110px; height:110px; background-image: url(%%vsdance%%); display: block; clear: none; float: left; }
 /* 4: OTHER THINGS*/
 
 a[href='/sp'] { display: inline-block; padding-right: 100%; }
@@ -575,6 +571,10 @@ version 1.5.1
 
 because I tend to break it
 
+version 1.5.2
+[Mrjoker7854 PINKIE BEST PONY]
+        > added name change to the Wubbers and added color and accounting this version for all other updates between Rhy's version and this on [](/1c)
+
 
 http://i.imgur.com/12XPI.png
 [derram]
@@ -598,6 +598,34 @@ div.titlebox .users-online span.number:after
 .sidecontentbox .id-t2_8lje7, .sidecontentbox .id-t2_8lje7 ~ *{display: none !important} 
 
 
+/* Replace the nsfw image */
+.thumbnail.nsfw {
+    background-image: url(%%thumbnails%%);
+    background-repeat: no-repeat;
+    width: 70px;
+    height: 70px;
+    background-position: 0px 0px;
+}
+
+/* Replace the self-post image */
+.thumbnail.self {
+    background-image: url(%%thumbnails%%);
+    background-repeat: no-repeat;
+    width: 70px;
+    height: 70px;
+    background-position: 0px -70px;
+}
+
+/* Replace the no-thumb image */
+.thumbnail.default {
+    background-image: url(%%thumbnails%%);
+    background-repeat: no-repeat;
+    width: 70px;
+    height: 70px;
+    background-position: 0px -140px;
+}
+
+
 /* Replacing somebody's name? Add it to the list here. */
 
 a.author[href$="derram_2"],
@@ -610,7 +638,11 @@ a.author[href$="xane_nightwing"],
 a.author[href$="Ninja8259"],
 a.author[href$="bwicesoldier"],
 a.author[href$="ajtexasranger"],
-a.author[href$="shadari"]
+a.author[href$="shadari"],
+a.author[href$="Serious_Hacker"],
+a.author[href$="Toklankitsune"],
+a.author[href$="bryvood"],
+a.author[href$="otwem"]
 
 { 
 font-size:0!important; 
@@ -631,7 +663,11 @@ a.author[href$="xane_nightwing"]:before ,
 a.author[href$="Ninja8259"]:before ,
 a.author[href$="bwicesoldier"]:before ,
 a.author[href$="ajtexasranger"]:before ,
-a.author[href$="shadari"]:before 
+a.author[href$="shadari"]:before ,
+a.author[href$="Serious_Hacker"]:before ,
+a.author[href$="Toklankitsune"]:before ,
+a.author[href$="bryvood"]:before ,
+a.author[href$="otwem"]:before 
 
 
 {
@@ -639,7 +675,7 @@ font-size:10px!important;
 visibility:visible!important;
 }
 
-/* Replacing somebody's name? Put the replacement here. */
+/* Replacing somebody's name? Put the replacement or color here. */
 
 a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
 a.author[href$=Chinch335]:before {content:"Chinchy"}
@@ -652,3 +688,12 @@ a.author[href$="Ninja8259"]:before {content:"Colgate"}
 a.author[href$="bwicesoldier"]:before {content:"IceSoldier"}
 a.author[href$="ajtexasranger"]:before {content:"That Guy"}
 a.author[href$="shadari"]:before {content:"Shadari Scratchtavia"}
+a.author[href$="Serious_Hacker"]:before {content:"DJ P0N-3"}
+a.author[href$="Toklankitsune"]:before {content:"DJ T0ki"}
+a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
+a.author[href$="otwem"]:before {content:"Otwem Scratch"}
+
+/* Replacing somebody's name color? Put the css here. */
+
+.author[href$="Ninja8259"] { color:aqua !important }
+.author[href$="mrjoker7854"] { color:pink !important }
