--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -50,7 +50,17 @@ color:white;
 font-size:20px;
 font-family:Arial;
 font-style:italic;
+text-shadow: 2px 2px 2px black, -2px -2px 2px black, -2px 2px 2px black, 2px -2px 2px black !important;
 
+}
+
+.pagename a:hover{
+color:white;
+font-size:20px;
+font-family:Arial;
+font-style:italic;
+text-shadow: 2px 2px 2px #CD0000, -2px -2px 2px #CD0000, -2px 2px 2px #CD0000, 2px -2px 2px #CD0000!important;
+text-decoration: none;
 }
 
 .side .titlebox h1 a, .side .titlebox h1 a:link .side .titlebox h1 a:visited {
@@ -245,14 +255,14 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v15%%) !important;
+background-image: url(%%foe-em3-v19%%) !important;
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -262,7 +272,47 @@ a[href|="/drrampage"]{ background-position: 0px -305px;}
 a[href|="/lpinspire"]{ background-position: 0px -380px; width:88px; height:150px;}
 a[href|="/calamitywtf"]{ background-position: 0px -535px; width:78px; height:101px;}
 a[href|="/harmony"]{ background-position: 0px -640px; width:200px; height:225px;}
+a[href|="/bjsurprise"]{ background-position: 0px -870px; width: 119px; height: 76px;}
 
+
+a[href|="/advicebj"]
+{
+    width: 300px !important;
+    height: 300px !important;
+    cursor: default !important;
+    display: block !important;
+    background-repeat: no-repeat !important;
+    text-align: center !important;
+    color: white !important;
+    font-family: Impact, sans-serif !important;
+    font-size: 26px !important;
+    line-height: 24px !important;
+    text-shadow: 2px 2px 2px black, -2px -2px 2px black, -2px 2px 2px black, 2px -2px 2px black !important;
+    overflow: hidden !important;
+    position: relative !important;
+    text-transform: uppercase !important;
+    background-image: url(%%foe-em3-v19%%) !important;
+}
+a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
+
+a[href|='/advicebj'] em{
+    font-style: normal !important;
+    position: absolute !important;
+    top: 12px !important;
+    width: 280px !important;
+    color: white !important;
+    left: 50% !important;
+    margin-left: -140px !important
+    }
+a[href|='/advicebj'] strong{
+    font-weight: normal !important;
+    position: absolute !important;
+    bottom: 18px !important;
+    color: white !important;
+    width: 280px !important;
+    left: 50% !important;
+    margin-left: -140px !important
+    }
 
 /* Flair */
 
